Bug 76206 - UI: Undo function shows not the correct context
Summary: UI: Undo function shows not the correct context
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: All All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-15 14:00 UTC by A (Andy)
Modified: 2014-04-03 14:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A (Andy) 2014-03-15 14:00:21 UTC
Problem Description:
The UNDO function shows after the deletion of a table "Undo: Delete row" instead of "Undo: Delete table".  If you delete a row or a column then the UNDO function shows correctly undo the row deletion resp. the column deletion.

Steps to Reproduce:
1. Open WRITER
2. Go to TABLE -> INSERT -> TABLE
3. Press the INSERT button to insert a table
4. Go to TABLE -> DELETE -> TABLE
5. Go to EDIT -> UNDO

Result: 
The UNDO function shows "Undo: Delete row" instead of "Undo: Delete table".

System: LO 4.2.1.1, Win 8.1
Comment 1 A (Andy) 2014-03-15 14:01:20 UTC
tested in LO WRITER
Comment 2 Jean-Baptiste Faure 2014-03-15 22:41:01 UTC
Confirmed in (dev.) version 4.2.3.0.0+ under Linux / Ubuntu 13.10 x86-64.
That said the command "Undo: Delete row" does the job and restore the table.

Best regards. JBF
Comment 3 Commit Notification 2014-04-03 14:47:16 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea3277265af9aab9a297151d5e1f3adfb1c823ef

Resolves: fdo#76206 show 'Delete table' instead of 'Delete row'



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.