Resolves: fdo#76206 show 'Delete table' instead of 'Delete row'

on deleting a full table

Change-Id: I03af8bcbae41e78229163a945a74387f53787ca5